Various menu fixes (#300)
* Fix arrow getting pushed aside by text

Previously, the arrow would get pushed out of place if the text
was long.

By putting the floating arrow before the text, it displaces the
text instead and remains in the correct position.


* Fix outer table of contents margin

Somebody has clearly tried to make this work, but this selector
didn't do anything. This is the correct more specific selector.


* Fix table of contents links falling off right

Margin pushes child links off the right hand side of the page.
Also added a bit of padding so the text doesn't go right up to
the edge.


* Remove page title from table of contents

It's unnecessary, and removes one level of nesting to make the TOC
a bit more compact.

Unfortunately this is hacked because it is not possible to edit
the template for the TOC:
https://github.com/spf13/hugo/issues/225


* Shorten text in search box so it fits

--- a/themes/docker-2016/static/documentation.css
+++ b/themes/docker-2016/static/documentation.css
@@ -222,7 +222,7 @@ div.docsidebarnav_section.affix ul {
   font-size: 14px;
   font-style: normal;
   margin: 0;
-  padding: 10px 0 10px 15px;
+  padding: 10px 15px;
   display: block;
   line-height: 15px;
 }
@@ -243,12 +243,24 @@ div.docsidebarnav_section.affix ul {
     width: 100%;
     text-align: left;
     overflow: hidden;
-    margin-left: 0.30rem;
+    margin-left: 0;
+    padding-left: 0.30rem;
     font-size: 14px;
 }
-​​nav#TableOfContents > ul {
-  margin-left: 0 !important;
+#TableOfContentsSection #TableOfContents > ul {
+  padding-left: 0;
 }
+
+/* HACK: Don't display current page title in TOC. */
+/* This removes one level of hierarchy and makes it a bit more compact. */
+#TableOfContentsSection #TableOfContents > ul > li > a {
+  display: none;
+}
+
+#TableOfContentsSection #TableOfContents > ul > li > ul {
+  padding-left: 0;
+}
+
 .advisory {
 color: #F04124;
     margin: -20px -20px 20px -20px;
